:sparkles: using pre-estimation to avoid introduced bias early

--- a/README.Rmd
+++ b/README.Rmd
@@ -43,10 +43,10 @@ library(coxstream)
 formula <- survival::Surv(time, status) ~ X1 + X2 + X3 + X4 + X5
 fit <- coxstream(
   formula, sim[sim$batch_id == 1, ],
-  degree = 4, boundary = c(0, 3), idx_col = "patient_id"
+  n_basis = 7, boundary = c(0, 3), idx_col = "patient_id"
 )
 for (batch in 2:10) {
-  fit <- update(fit, sim[sim$batch_id == batch, ])
+  fit <- update(fit, sim[sim$batch_id == batch, ], nu = 0.4)
 }
 summary(fit)
 ```
